--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,165 @@
-.hello{
-    color: red;
+/* roboto-condensed-regular - latin */
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto Condensed"), local("RobotoCondensed-Regular"),
+    url("assets/fonts/roboto-condensed-v19-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("assets/fonts/roboto-condensed-v19-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #fbeec1;
+}
+h1 {
+  font-size: 4em;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+#container-nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: auto;
+  display: inline-block;
+  height: 75px;
+  font-weight: bold;
+  background-color: inherit;
+}
+#nav1 {
+  margin-left: 2%;
+  margin-top: auto;
+  margin-bottom: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 30%;
+  float: left;
+  column-gap: 0.5rem;
+}
+#nav1 a {
+  border: 1px solid red;
+  text-align: center;
+  font-family: "Roboto Condensed";
+  font-weight: bold;
+  font-size: 18px;
+}
+#nav2 {
+  float: right;
+  margin-right: 2%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 1rem;
+}
+#facebook {
+  background-image: url("/src/assets/images/facebook.svg");
+}
+.social {
+  background-repeat: no-repeat;
+  height: 2em;
+  width: 1em;
+}
+#logo {
+  width: 400px;
+  display: none;
+}
+#container {
+  margin: auto;
+  width: 900px;
+  font-family: "Roboto Condensed";
+  margin-top: 100px;
+}
+#about-wrapper {
+  display: flex;
+  max-height: 500px;
+  justify-items: center;
+}
+.title {
+  margin-bottom: 30px;
+}
+#about-text {
+  flex: 3;
+  padding-right: 50px;
+  padding-top: 20px;
+  font-size: 18px;
+  text-align: left;
+}
+#about-img-wrapper {
+  flex: 5;
+  align-self: center;
+  border: 1px solid red;
+}
+#about-img {
+  width: 100%;
+}
+#prodotti-flex {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-left: -100px;
+}
+#prodotti-title {
+  text-align: justify;
+}
+#sparsi {
+  width: 700px;
+  height: auto;
+  padding-top: 15px;
+  padding-right: 100px;
+}
+.spaced {
+  margin-bottom: 200px;
+}
+
+#gallery {
+  height: 450px;
+  display: flex;
+}
+#desc button {
+  border: 3px solid brown;
+  background-color: inherit;
+  border-radius: 100%;
+  font-size: 40px;
+  font-weight: bold;
+  height: 75px;
+  width: 75px;
+  transition: background-color 0.2s;
+}
+#desc button:hover {
+  background-color: brown;
+}
+#next {
+  position: relative;
+  left: 55%;
+  z-index: 1;
+}
+#prev {
+  float: left;
+}
+#gallery div {
+  flex: 2;
+  border: 1px solid gold;
+}
+#gallery #item-container {
+  flex: 5;
+}
+.gallery-item {
+  width: 100%;
+}
+
+/* for mobile and small screen */
+@media only screen and (max-width: 900px) {
+  #about-wrapper {
+    flex-direction: column-reverse;
+    margin-right: inherit;
+    margin: none;
+  }
+  #about-img-wrapper {
+    width: 100%;
+  }
 }
