--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ a {
   height: 75px;
   font-weight: bold;
   background-color: inherit;
+  z-index: 2;
 }
 #nav1 {
   margin-left: 2%;
@@ -64,7 +65,7 @@ a {
   height: 2em;
   width: 1em;
 }
-#logo {
+#logo-intro {
   width: 400px;
   display: none;
 }
@@ -78,6 +79,7 @@ a {
   display: flex;
   max-height: 500px;
   justify-items: center;
+  border: 1px solid gold;
 }
 .title {
   margin-bottom: 30px;
@@ -119,6 +121,8 @@ a {
 #gallery {
   height: 450px;
   display: flex;
+  margin-left: -150px;
+  margin-right: -150px;
 }
 #desc button {
   border: 3px solid brown;
@@ -142,7 +146,7 @@ a {
   float: left;
 }
 #gallery div {
-  flex: 2;
+  flex: 3;
   border: 1px solid gold;
 }
 #gallery #item-container {
@@ -151,15 +155,65 @@ a {
 .gallery-item {
   width: 100%;
 }
-
+#contacts-wrapper {
+  background-color: #ba483d;
+  width: 100%;
+  margin: auto;
+  height: 80vh;
+  text-align: center;
+}
+#contacts {
+  display: flex;
+  text-align: left;
+  width: 900px;
+  margin: auto;
+}
+#contacts div {
+  flex: 1;
+}
+h3 {
+  font-size: 1.5em;
+}
+#contacts div h3 {
+  margin-bottom: 15px;
+}
+#logo {
+  margin-top: 50px;
+  width: 500px;
+  float: right;
+  margin-right: 100px;
+}
+#logo-wrapper {
+  background-color: white;
+}
 /* for mobile and small screen */
+@media only screen and (max-width: 1250px) {
+  #gallery {
+    margin-left: 0;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  #gallery {
+    margin-right: 0;
+  }
+}
 @media only screen and (max-width: 900px) {
   #about-wrapper {
     flex-direction: column-reverse;
-    margin-right: inherit;
-    margin: none;
+    max-width: 100%;
+    max-height: 300vh;
   }
   #about-img-wrapper {
+    flex: 1;
+  }
+  #container {
     width: 100%;
+  }
+  #contacts {
+    flex-direction: column;
+    min-height: 80vh;
+  }
+  #gallery {
+    flex-direction: column-reverse;
   }
 }
