--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ a {
   column-gap: 1rem;
 }
 #facebook {
-  background-image: url("/src/assets/images/facebook.svg");
+  background-image: url("assets/images/facebook.svg");
 }
 .social {
   background-repeat: no-repeat;
